force-app/main/default/objects/Rate_List__c/fields/Area_Type__c.field-meta.xml
<CustomField>
    <fullName>Area_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Area Type</label>
    <referenceTo>Area_Type__c</referenceTo>
    <relationshipLabel>Rate Lists</relationshipLabel>
    <relationshipName>Rate_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>