force-app/main/default/objects/Rate_List__c/fields/Charge_on_Area_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_on_Area_Type__c</fullName>
    <label>Charge on Area Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carpet Area</fullName>
            </value>
            <value>
                <fullName>Saleable Area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>