force-app/main/default/objects/Rate_List__c/fields/ChargeCost__c.field-meta.xml
<CustomField>
    <fullName>ChargeCost__c</fullName>
    <label>ChargeCost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>