force-app/main/default/objects/Rate_List__c/fields/Charged_Based_On__c.field-meta.xml
<CustomField>
    <fullName>Charged_Based_On__c</fullName>
    <formula>TEXT(Charge_Based_On_Master__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charged Based On</label>
    <type>Text</type>
</CustomField>