force-app/main/default/objects/Rate_List__c/fields/Effective_Till__c.field-meta.xml
<CustomField>
    <fullName>Effective_Till__c</fullName>
    <formula>Rate_List_HeaderID__r.Effective_Till__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Till</label>
    <type>Date</type>
</CustomField>