force-app/main/default/objects/Rate_List__c/fields/EffectiveFrom__c.field-meta.xml
<CustomField>
    <fullName>EffectiveFrom__c</fullName>
    <formula>Rate_List_HeaderID__r.Effective_From__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EffectiveFrom</label>
    <type>Date</type>
</CustomField>