force-app/main/default/objects/Rate_List__c/fields/Global_Charges__c.field-meta.xml
<CustomField>
    <fullName>Global_Charges__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Global Charges</label>
    <referenceTo>Global_Charges__c</referenceTo>
    <relationshipLabel>Rate Lists</relationshipLabel>
    <relationshipName>Rate_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>