force-app/main/default/objects/Rate_List__c/fields/Param1__c.field-meta.xml
<CustomField>
    <fullName>Param1__c</fullName>
    <formula>Rate_List_Detail__r.Param_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Param1</label>
    <type>Text</type>
</CustomField>