force-app/main/default/objects/Rate_List__c/fields/Param2__c.field-meta.xml
<CustomField>
    <fullName>Param2__c</fullName>
    <formula>Rate_List_Detail__r.Param2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Param2</label>
    <type>Text</type>
</CustomField>