force-app/main/default/objects/Rate_List__c/fields/Param3__c.field-meta.xml
<CustomField>
    <fullName>Param3__c</fullName>
    <formula>Rate_List_Detail__r.Param_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Param3</label>
    <type>Text</type>
</CustomField>