force-app/main/default/objects/Rate_List__c/fields/Ranges_To__c.field-meta.xml
<CustomField>
    <fullName>Ranges_To__c</fullName>
    <formula>Rate_List_Detail__r.Ranges_To__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ranges To</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>