force-app/main/default/objects/Rate_List__c/fields/Rate_List_Detail__c.field-meta.xml
<CustomField>
    <fullName>Rate_List_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate List Detail</label>
    <referenceTo>Rate_List_Detail__c</referenceTo>
    <relationshipLabel>Rate Lists</relationshipLabel>
    <relationshipName>Rate_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>