force-app/main/default/objects/Rate_List__c/fields/Rate_List_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_List_Type__c</fullName>
    <formula>Text(Rate_List_HeaderID__r.Rate_list__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate List Type</label>
    <type>Text</type>
</CustomField>