force-app/main/default/objects/Rate_List__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Actual Area Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>